--- a/App/Targets/Randomizer.Android/Randomizer.Android.csproj
+++ b/App/Targets/Randomizer.Android/Randomizer.Android.csproj
@@ -121,10 +121,6 @@
     <AndroidResource Include="Resources\mipmap-anydpi-v26\icon_round.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Libraries\EnigmatiKreations.Framework\EnigmatiKreations.Framework.Controls\EnigmatiKreations.Framework.Controls.csproj">
-      <Project>{4f38e398-edb3-4bc2-a33c-dbec273c1fd6}</Project>
-      <Name>EnigmatiKreations.Framework.Controls</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\..\Libraries\Randomizer.Framework\Randomizer.Framework.Services\Randomizer.Framework.Services.csproj">
       <Project>{2ae44201-2368-4d3a-9f76-e85912b20112}</Project>
       <Name>Randomizer.Framework.Services</Name>
@@ -209,7 +205,7 @@
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties XamarinHotReloadDebuggerTimeoutExceptionRandomizerAndroidHideInfoBar="True" TriggeredFromHotReload="False" />
+      <UserProperties TriggeredFromHotReload="False" XamarinHotReloadDebuggerTimeoutExceptionRandomizerAndroidHideInfoBar="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
